# Proxydomo

./: .gitignore  meson.build
Proxydomo/: AboutDlg.h  AdblockFilter.cpp  AdblockFilter.h  AppConst.h  BlockListDatabase.cpp  BlockListDatabase.h  BrotliDecompressor.cpp  BrotliDecompressor.h  CodeConvert.cpp  CodeConvert.h  ConnectionMonitor.cpp  ConnectionMonitor.h  DataReceptor.h  DebugWindow.cpp  DebugWindow.h  Decompressor.h  DirectoryWatcher.h  DomainJudge.cpp  DomainJudge.h  FilterDescriptor.cpp  FilterDescriptor.h  FilterEditWindow.cpp  FilterEditWindow.h  FilterManageWindow.cpp  FilterManageWindow.h  FilterOwner.cpp  FilterOwner.h  Log.h  LogViewWindow.cpp  LogViewWindow.h  Logger.cpp  Logger.h  MainDlg.cpp  MainDlg.h  Matcher.h  Matcher_.cpp  Misc.cpp  Misc.h  Node.h  Nodes.h  (+28 more)
Proxydomo/UnitTest/: Test_brotli.cpp
Proxydomo/brotli/common/: constants.h  dictionary.h  version.h
Proxydomo/brotli/dec/: bit_reader.h  context.h  huffman.h  port.h  prefix.h  state.h  transform.h
Proxydomo/brotli/enc/: backward_references.h  backward_references_hq.h  backward_references_inc.h  bit_cost.h  block_encoder_inc.h  block_splitter.h  block_splitter_inc.h  brotli_bit_stream.h  cluster.h  cluster_inc.h  command.h  compress_fragment.h  compress_fragment_two_pass.h  context.h  dictionary_hash.h  entropy_encode.h  entropy_encode_static.h  fast_log.h  find_match_length.h  hash.h  hash_forgetful_chain_inc.h  hash_longest_match64_inc.h  hash_longest_match_inc.h  hash_longest_match_quickly_inc.h  hash_to_binary_tree_inc.h  histogram.h  histogram_inc.h  literal_cost.h  memory.h  metablock.h  metablock_inc.h  port.h  prefix.h  quality.h  ringbuffer.h  static_dict.h  static_dict_lut.h  utf8_util.h  write_bits.h
Proxydomo/brotli/include/brotli/: decode.h  encode.h  port.h  types.h
Proxydomo/lang/: English.lng  Japanese.lng
Proxydomo/proximodo/: Proximodo_private.h  configscreen.cpp  configscreen.h  const.h  controls.cpp  controls.h  descriptor.cpp  descriptor.h  editscreen.cpp  editscreen.h  events.cpp  events.h  expander.cpp  expander.h  filter.cpp  filter.h  filterowner.cpp  filterowner.h  giffilter.cpp  giffilter.h  headerfilter.cpp  headerfilter.h  log.cpp  log.h  logframe.cpp  logframe.h  logviewer.h  main.cpp  mainframe.cpp  mainframe.h  managerthread.cpp  managerthread.h  matcher.cpp  matcher.h  memory.h  node.h  nodes.cpp  nodes.h  platform.cpp  platform.h  (+27 more)
Proxydomo/sqlite/: sqlite3ext.h
sqlite/: meson.build
subprojects/: icu.wrap
wtl/: meson.build
